--- a/app/index.html
+++ b/app/index.html
@@ -22,14 +22,35 @@
         <img src="images/header/twitter.svg" alt="twitter" class="header__social-icon">
         <img src="images/header/inst.svg" alt="inst" class="header__social-icon">
       </div>
+      <svg class="header__burger" width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <rect width="56" height="56" fill="black"/>
+        <path d="M16 22H41" stroke="white" stroke-width="2" stroke-linecap="round"/>
+        <path d="M16 28H41" stroke="white" stroke-width="2" stroke-linecap="round"/>
+        <path d="M16 34H41" stroke="white" stroke-width="2" stroke-linecap="round"/>
+        </svg>
     </header>
+  </div>
+  <div class="slide">
+    <div class="slide__item">
+      <a href="#">Продукты</a>
+    </div>
+    <div class="slide__item">
+      <a href="#">Технологии</a>
+    </div>
+    <div class="slide__item">
+      <a href="#">Experience</a>
+    </div>
+    <div class="slide__social">
+      <img src="images/header/twitter.svg" alt="twitter" class="header__social-icon">
+      <img src="images/header/inst.svg" alt="inst" class="header__social-icon">
+    </div>
   </div>
 
   <section class="main">
     <div class="container">
-      <h1 class="main__title">ПРЕИМУЩЕСТВА G-SYNC</h1>
+      <h1 class="main__title">ПРЕИМУЩЕСТВА<br class="main__title-divider"> G-SYNC</h1>
       <div class="main__descr">
-        Каждый монитор с технологией G-SYNC проходит серьезное тестирование и контроль качества для обеспечения максимальной производительности. Сотни мониторов проходят контроль качества, но только прошедшие все тесты получают сертификацию G-SYNC.
+        Каждый монитор с технологией<br class="main__title-divider"> G-SYNC проходит серьезное тестирование и контроль качества<br class="main__title-divider"> для обеспечения максимальной производительности. Сотни мониторов проходят контроль качества, но только прошедшие все тесты получают сертификацию<br class="main__title-divider"> G-SYNC.
       </div>
       <div class="main__wrapper">
         <div class="main__wrapper-item">
