feat: add adaptive layout and function for send forms

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
         <img src="images/header/inst.svg" alt="inst" class="header__social-icon">
       </div>
       <svg class="header__burger" width="56" height="56" viewBox="0 0 56 56" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <rect width="56" height="56" fill="black"/>
+        <rect id="burger-back" width="56" height="56" fill="black"/>
         <path d="M16 22H41" stroke="white" stroke-width="2" stroke-linecap="round"/>
         <path d="M16 28H41" stroke="white" stroke-width="2" stroke-linecap="round"/>
         <path d="M16 34H41" stroke="white" stroke-width="2" stroke-linecap="round"/>
@@ -98,6 +98,7 @@
         <div class="popup__form-title">ПРЕИМУЩЕСТВА G-SYNC</div>
         <input type="text" name="name" placeholder="Имя" class="popup__form-input">
         <input type="email" name="email" placeholder="Mail" class="popup__form-input">
+        <button type="submit" class="popup__btn">КУПИТЬ</button>
       </form>
     </div>
   </div>
